4B/cs444/tests/site/pass/pass_protectedmethods.joos
/* pass: protected methods */
public class A {
  public A() {}
  protected int m() {
    return 42;
  }
}

