4B/cs444/tests/site/fail/fail_privatemethods.joos
/* fail: private methods */
public class A {
  private int m() {
    return 42;
  }
}

